Fix overflow

--- a/client/src/components/Dashboard/Dashboard.scss
+++ b/client/src/components/Dashboard/Dashboard.scss
@@ -1,9 +1,5 @@
 .Dashboard {
-  padding-top: 4.5em;
   height: 100%;
-  position: absolute;
-  right: 0;
-  left: 0;
 
   &__Header {
     font-size: 3em;
@@ -12,8 +8,13 @@
     width: 100%;
     padding-left: 1em;
     padding-top: 0.2em;
+    display: none;
+
+    @media (min-width: 600px) {
+      display: block;
+    }
   }
-  
+
   &__Content {
     display: flex;
     flex-direction: column;
@@ -37,6 +38,7 @@
 }
 
 .Container {
-  margin: 0 1em;
-  min-height: 100vh;
+  height: 100vh;
+  box-sizing: border-box;
+  padding-top: 4.5em;
 }
