--- a/client/src/components/KeyInput/KeyInput.scss
+++ b/client/src/components/KeyInput/KeyInput.scss
@@ -3,10 +3,16 @@
   flex-direction: column;
   text-align: center;
   width: 90%;
-  margin: 50px auto;
+  margin: 0 auto;
+  margin-bottom: auto;
   transition: 0.3s;
   border-radius: 5px;
   color: rgb(0, 0, 0);
+  font-size: 10px;
+
+  @media (min-width: 600px) {
+    font-size: inherit;
+  }
 
   &__Header {
     font-size: 3em;
@@ -14,9 +20,11 @@
     font-style: oblique;
   }
   &__ButtonBox {
-    display: flex;
+    font-size: 16px;
 
-    justify-content: center;
+    @media (min-width: 600px) {
+      font-size: inherit;
+    }
   }
 
   &__Icon {
@@ -29,8 +37,9 @@
 
   &__Input {
     color: rgb(67, 72, 87);
-    font-size: 1.4em;
-    margin: 30px auto;
+    font-size: 1.8em;
+    margin: 20px auto;
+    margin-top: 10px;
     padding: 5px 0;
     width: 95%;
     text-align: center;
@@ -39,6 +48,7 @@
 
     @media (min-width: 600px) {
       width: 60%;
+      font-size: 1.4em;
     }
   }
 }
